--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ matrix:
     - os: linux
       dist: xenial
       sudo: required
-#    - os: osx
-#      osx_image: xcode8.2
-#      sudo: required
+    - os: osx
+      osx_image: xcode8.3
+      sudo: required
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then eval "$(curl -sL https://github.com/odaceo/script-ubuntu-swiftenv/raw/master/install.sh)" ; fi
-#  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ossp-uuid ; fi
 
 script:
   - swift build --configuration release
